# ffmpeg_distribution

./: .gitignore  README.md  README.zh-CN.md  ReadMe.md  build_linux.sh  build_macos.sh  build_windows.sh  clean.sh  prepare.sh  tag.sh  version.sh
.github/workflows/: main.yml  night-build.yml
example/: CMakeLists.txt
example/audio_convert/: CMakeLists.txt  main.c  test_audio_convert.sh
example/media_info/: CMakeLists.txt  main.c
example/media_sdk/: audio_normalize.c  common.c  internal.h  media_info.c  media_sdk.h  video_normalize.c
example/video_convert/: CMakeLists.txt  main.c  test_video_convert.sh
patch/libvorbis/: CMakeLists.txt
script/: ffmpeg.sh  ffmpeg_centos_devtoolset.sh  ffmpeg_darwin.sh  ffmpeg_test.sh  ffmpeg_win32.sh
